MDEV-25967: Correctly extend deferred-recovery files

recv_sys_t::recover_deferred(): Set the file size to match the number
of pages. Mariabackup might copy the file while it was being extended.